test/io/fsouza/chown/no_such_file.chpl
use FileSystem;
chown("unknown_file.txt", 1000, 1000);
